# fastapi-template

./: Makefile  README.md  pyproject.toml
app/: requirements.txt
app/config/: settings.py
app/core/: __init__.py  database.py  settings.py
app/migrations/: env.py
